docs/envoy/v1.9.0/_sources/api-v2/config/accesslog/v2/file.proto.rst.txt
.. _envoy_api_file_envoy/config/accesslog/v2/file.proto:

File access log
===============


.. _envoy_api_msg_config.accesslog.v2.FileAccessLog:

config.accesslog.v2.FileAccessLog
---------------------------------

`[config.accesslog.v2.FileAccessLog proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/accesslog/v2/file.proto#L13>`_

Custom configuration for an :ref:`AccessLog <envoy_api_msg_config.filter.accesslog.v2.AccessLog>`
that writes log entries directly to a file. Configures the built-in *envoy.file_access_log*
AccessLog.

.. code-block:: json

  {
    "path": "...",
    "format": "...",
    "json_format": "{...}"
  }

.. _envoy_api_field_config.accesslog.v2.FileAccessLog.path:

path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) A path to a local file to which to write the access log entries.
  
  
.. _envoy_api_field_config.accesslog.v2.FileAccessLog.format:

format
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Access log :ref:`format string<config_access_log_format_strings>`
  
  Access log format. Envoy supports :ref:`custom access log formats
  <config_access_log_format>` as well as a :ref:`default format
  <config_access_log_default_format>`.
  
  
  Only one of :ref:`format <envoy_api_field_config.accesslog.v2.FileAccessLog.format>`, :ref:`json_format <envoy_api_field_config.accesslog.v2.FileAccessLog.json_format>` may be set.
  
.. _envoy_api_field_config.accesslog.v2.FileAccessLog.json_format:

json_format
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Access log :ref:`format dictionary<config_access_log_format_dictionaries>`
  
  Access log format. Envoy supports :ref:`custom access log formats
  <config_access_log_format>` as well as a :ref:`default format
  <config_access_log_default_format>`.
  
  
  Only one of :ref:`format <envoy_api_field_config.accesslog.v2.FileAccessLog.format>`, :ref:`json_format <envoy_api_field_config.accesslog.v2.FileAccessLog.json_format>` may be set.
  

